--- a/components/SectionContainer/SectionContainer.css
+++ b/components/SectionContainer/SectionContainer.css
@@ -18,9 +18,9 @@
 .main::before {
   content: "";
   position: absolute;
-  width: calc(100% - 20px);
-  height: calc(100% - 20px);
-  background: var(--sec-bg);
+  width: calc(100% + 20px);
+  height: calc(100% + 20px);
+  background: var(--nav-bg);
   backdrop-filter: blur(20px);
   z-index: -1;
   top: 50%;
@@ -30,11 +30,11 @@
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
-  border-radius: 0.9rem;
-  -webkit-border-radius: 0.9rem;
-  -moz-border-radius: 0.9rem;
-  -ms-border-radius: 0.9rem;
-  -o-border-radius: 0.9rem;
+  border-radius: 1.5rem;
+  -webkit-border-radius: 1.5rem;
+  -moz-border-radius: 1.5rem;
+  -ms-border-radius: 1.5rem;
+  -o-border-radius: 1.5rem;
   border: 2px solid var(--nav-border);
 }
 
