--- a/components/SectionContainer/SectionContainer.css
+++ b/components/SectionContainer/SectionContainer.css
@@ -15,13 +15,13 @@
     width: 1170px;
   }
 }
-.main::before {
+
+.main::before,
+.main:after {
   content: "";
   position: absolute;
   width: calc(100% + 20px);
   height: calc(100% + 20px);
-  background: var(--nav-bg);
-  z-index: -1;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -29,12 +29,23 @@
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
+  z-index: -1;
   border-radius: 1.5rem;
   -webkit-border-radius: 1.5rem;
   -moz-border-radius: 1.5rem;
   -ms-border-radius: 1.5rem;
   -o-border-radius: 1.5rem;
+}
+
+.main::before {
+  background: var(--nav-bg);
   border: 2px solid var(--nav-border);
+}
+
+.main:after {
+  background-color: transparent;
+  filter: blur(10px);
+  -webkit-filter: blur(10px);
 }
 
 .mainSectionHeader {
